# cellar

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  justfile
.cargo/: config.toml
.github/actions/rust-setup/: action.yaml
.github/workflows/: ci.yaml  release.yaml
config/: .env.example  client.example.toml  server.dev.toml  server.example.toml  server.toml
crates/cli/: Cargo.toml
crates/cli/src/: api_client.rs  main.rs
crates/cli/src/service/: mod.rs  templates.rs
crates/cli/tests/: api_client_tests.rs  cli_login_use_tests.rs
crates/core/: Cargo.toml
crates/core/src/: chunk.rs  config.rs  error.rs  hash.rs  lib.rs  manifest.rs  narinfo.rs  storage_domain.rs  store_path.rs  token.rs  upload.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: error.rs  lib.rs  models.rs  postgres.rs  postgres_schema.sql  store.rs
crates/metadata/src/repos/: bootstrap.rs  caches.rs  chunks.rs  domains.rs  gc.rs  manifests.rs  mod.rs  store_paths.rs  tokens.rs  tombstones.rs  trusted_keys.rs  uploads.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  bootstrap.rs  compression.rs  error.rs  lib.rs  main.rs  metrics.rs  ratelimit.rs  routes.rs  state.rs
crates/server/src/handlers/: admin.rs  auth.rs  capabilities.rs  common.rs  mod.rs  nix.rs  uploads.rs
crates/server/tests/: admin_token_validation_tests.rs  api_tests.rs  bootstrap_tests.rs  cache_crud_tests.rs  metadata_tests.rs  postgres_tests.rs  storage_sweep_tests.rs  storage_tests.rs  upload_expected_chunks_tests.rs
crates/server/tests/common/: fixtures.rs  metadata.rs  mod.rs  server.rs  storage.rs
crates/signer/: Cargo.toml
crates/signer/src/: error.rs  key.rs  lib.rs  signer.rs
crates/storage/: Cargo.toml
crates/storage/src/: context.rs  error.rs  lib.rs  poc.rs  token.rs  traits.rs
crates/storage/src/backends/: filesystem.rs  mod.rs  s3.rs
crates/storage/tests/: cancellation_tests.rs  consistency_tests.rs  context_lifetime_tests.rs  memory_tests.rs  pagination_tests.rs  s3_backend_tests.rs  token_validation_tests.rs
crates/storage/tests/common/: fixtures.rs  memory.rs  mocks.rs  mod.rs
docker/: Dockerfile  Dockerfile.nix  Dockerfile.release
docker/builder/: Dockerfile
docker/compose/: postgres-fs.yml  sqlite-fs.yml  sqlite-s3.yml
docker/config/: server.postgres-fs.toml  server.sqlite-fs.toml  server.sqlite-s3.toml
docker/dev/: Dockerfile  docker-compose.yml  init-cache.sh  server.toml
docker/dev/flake/: flake.nix  result
docker/init/minio/: create-bucket.sh
docker/init/postgres/: 01-init-schema.sql
docker/scripts/: generate-test-key.sh  wait-for-it.sh
docker/tests/cli/: Dockerfile  entrypoint.sh
docker/tests/cli/scenarios/: 01-cellarctl-push.sh  02-cellarctl-chunked.sh  03-token-crud.sh  04-cache-crud.sh  05-whoami-login-config.sh  06-key-management.sh  07-gc-cli.sh  08-use-set-nix-conf.sh
docker/tests/lib/: test-utils.sh
docker/tests/runner/: Dockerfile  entrypoint.sh
docker/tests/scenarios/: 01-health-check.sh  02-token-management.sh  03-upload-flow.sh  04-download-flow.sh  05-error-handling.sh  06-garbage-collection.sh  07-s3-storage.sh  08-postgres-metadata.sh  09-large-upload.sh  10-resume-upload.sh  11-cache-management.sh  12-authz-matrix.sh  13-commit-integrity.sh  14-narinfo-integrity.sh  15-metrics-sanity.sh  16-gc-safety.sh
migrations/: .gitkeep
scripts/: generate-key.sh
