[package]
name = "cellar-storage"
version.workspace = true
description = "Object storage abstraction and backends for Cellar"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cellar-core = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-credential-types = { workspace = true }
aws-smithy-http-client = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
pin-project-lite = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
percent-encoding = "2"
tempfile = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
sha2 = { workspace = true }
testcontainers = { workspace = true }
